# clion-platformio-esp32dev-template

./: CMakeLists.txt  CMakeListsPrivate.txt  README.md  build.sh  platformio.ini  upload.sh
lib/mylib/: mylib.cpp  mylib.h
src/: main.cpp
